register route+logic

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
-1) authentification
-2) pagination
-3) google api for location
+authentification
+authorization
+pagination
+google api for location
